README and STATUS-2016-03-25-B

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 BeagleBoneGreen SWD - a practical tool for computing freedom
 
-							Version 0.01
-							  2016-03-2x
+					    Non-release-Version 0.00
+							  2016-03-25
 							Niibe Yutaka
 					     Flying Stone Technology
 
@@ -10,6 +10,28 @@ BeagleBoneGreen SWD
 
 BeagleBoneGreen SWD (BBG-SWD) is a tool to control SWD protocol by
 BeagleBoneGreen.
+
+
+***The development status***
+============================
+
+The program on PRUSS (Programmable Realtime Unit SubSytem), PRU-SWD,
+is complete.  It is tested with the host program, test-pru.c.
+
+The BBG-SWD driver for OpenOCD is by those patches:
+
+	0001-initial-patch-for-BBG-SWD.patch
+	0002-minor-tweak-for-BBG-SWG.patch
+	0003-BBG-SWD-cache-coherency-fix.patch
+
+The BBG-SWD driver is not yet ready for use.  It works somehow, from
+the viewpoint of lower-level SWD communications, but it doesn't work
+as a tool yet.  Debugging to identify issue(s) is still needed.
+
+For detail, please see:
+
+	STATUS-2016-03-25-B
+	openocd-debug-log-20160325-06.log
 
 
 The purpose
